<resources>
    <string name="app_name">Renzo Just Java</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="thanks">Thank You!</string>
    <string name="nameHint">Put your name here:</string>
    <string name="toppings">Toppings</string>
    <string name="whippedCream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="sugar">Sugar</string>
    <string name="cookie">Cookie</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
</resources>
