<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
     android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background1">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:src="@drawable/bannercoffee" />
    <EditText
        android:id="@+id/name_field"
        android:hint="@string/nameHint"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:inputType="textCapWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:maxLength="30"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toppings"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textAllCaps="true"
        android:layout_marginBottom="16dp" />

    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/whippedCream"
        android:textSize="16sp"/>
    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/sugar_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/cookie_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cookie"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:textAllCaps="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:textSize="25sp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="8dp"
        android:onClick="decrement" />

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_marginBottom="16dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        android:textSize="25sp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:onClick="increment" />
        </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:onClick="submitOrder" />


</LinearLayout>
